added a button to div containing username

--- a/eye_btn.html
+++ b/eye_btn.html
@@ -1,1 +1,1 @@
-<button class="euphoria bg-green-300 absolute bottom-0 right-0 rounded-md shadow m-2">&#128065</button>
+<button class="bg-green-300 absolute bottom-0 right-0 rounded-md shadow m-2">&#128065</button>
