finished popup with css and html and persisiting

--- a/popup.html
+++ b/popup.html
@@ -8,12 +8,19 @@
 <body>
 
     <h1>Lablr</h1>
+    <p>---------------</p>
 
 
-    <ul class="list-group">
+
+
+
+    <ul class="list-group" style="list-style: none;">
         <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox" value="yes"> Crowd Sourced</li>
+        <div class="paddingAbove"></div>
         <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox2" value="yes"> Machine Learning</li>
+        <div class="paddingAbove"></div>
         <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox3" value="yes"> Misleading Information</li>
+
       </ul>
 
 
