popup fully done, added button that sends to options page and updated css further

--- a/popup.html
+++ b/popup.html
@@ -20,8 +20,10 @@
         <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox2" value="yes"> Machine Learning</li>
         <div class="paddingAbove"></div>
         <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox3" value="yes"> Misleading Information</li>
+    </ul>
 
-      </ul>
+        <!-- <button class="buttonPopup" id="go-to-options">Go to options</button> -->
+        <button class="button-81"id = "go-to-options" role="button">Options</button>
 
 
     <!-- <label class="container">Crowd Sourced
