--- a/popup.html
+++ b/popup.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="popup.css">
-    <title>Lablr</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="popup.css">
+  <title>Lablr</title>
 </head>
+
 <body>
 
-    <h1>Lablr</h1>
-    <p>---------------</p>
+  <h1>Lablr</h1>
+  <p>---------------</p>
 
 
 
 
 
-    <ul class="list-group" style="list-style: none;">
-        <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox" value="yes"> Crowd Sourced</li>
-        <div class="paddingAbove"></div>
-        <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox2" value="yes"> Machine Learning</li>
-        <div class="paddingAbove"></div>
-        <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox3" value="yes"> Misleading Information</li>
-    </ul>
+  <ul class="list-group" style="list-style: none;">
+    <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox" value="yes"> Crowd
+      Sourced</li>
+    <div class="paddingAbove"></div>
+    <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox2" value="yes"> Machine
+      Learning</li>
+    <div class="paddingAbove"></div>
+    <li class="list-group-item"><input type="checkbox" class="save-cb-state" name="mycheckbox3" value="yes"> Misleading
+      Information</li>
+  </ul>
 
-        <!-- <button class="buttonPopup" id="go-to-options">Go to options</button> -->
-        <button class="button-81"id = "go-to-options" role="button">Options</button>
+  <!-- <button class="buttonPopup" id="go-to-options">Go to options</button> -->
+  <button class="button-81" id="go-to-options" role="button">Options</button>
 
 
-    <!-- <label class="container">Crowd Sourced
+  <!-- <label class="container">Crowd Sourced
         <input type="checkbox">
         <span class="checkmark"></span>
       </label>
