--- a/options/information.html
+++ b/options/information.html
@@ -1,1 +1,12 @@
-<p> Hey </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="information.css">
+    <title>Options Page</title>
+</head>
+
+<body>
+    <h1> LABLR </h1>
+
+</body>
